--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,6 +30,12 @@ security:
                 # login form, uncomment the following line to always enable it.
                 #always_remember_me: true
             user_checker: App\Security\UserChecker
+
+            # configure the maximum login attempts
+            login_throttling:
+                max_attempts: 5 # per minute ...
+                interval: "3 minutes" # ... or in a custom period
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
