--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
             remember_me:
                 secret: "%kernel.secret%"
                 lifetime: 604800
-                path: /
+                # path: /
                 # by default, the feature is enabled by checking a checkbox in the
                 # login form, uncomment the following line to always enable it.
                 #always_remember_me: true
