user_roles_managment_done

--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,7 +5,7 @@ vich_uploader:
         type: attribute
 
     mappings:
-        products:
+        posts:
             uri_prefix: /images/dynamic/posts
             upload_destination: "%kernel.project_dir%/public/images/dynamic/posts"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
