--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
+        "knplabs/knp-paginator-bundle": "^6.9",
+        "knplabs/knp-time-bundle": "^2.4",
         "liip/imagine-bundle": "^2.13",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.2",
