--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "symfonycasts/reset-password-bundle": "^1.23",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.21",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.7"
     },
