--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -25,3 +25,14 @@ liip_imagine:
                 # 4px larger to create a 2px border around the final image
                 # background:
                 #     { size: [124, 124], position: center, color: "#00ff00" }
+
+        # the name of the "filter set"
+        visitor_post_thumb:
+            # adjust the image quality to 75%
+            quality: 100
+
+            # list of transformations to apply (the "filters")
+            filters:
+                # create a thumbnail: set size to 120x90 and use the "outbound" mode
+                # to crop the image when the size ratio of the input differs
+                thumbnail: { size: [300, 300] }
